# Submissions_C2

Ashish_Sahu/Day_06/: Day_0602_assignment_1_vector_db_basics.ipynb  Day_0602_assignment_2_advanced_rag.ipynb  Day_0602_assignment_3a_basic_gradio_rag.ipynb  Day_0602_assignment_3b_advanced_gradio_rag.ipynb  README.md
Prasanna_Neelavar/Day-11/agentic-rag/: .env.example  app.py  pyproject.toml
Prasanna_Neelavar/Day-11/agentic-rag/src/: agents.py  chains.py  config.py  document_processor.py  llm_utils.py  tools.py
Prasanna_Neelavar/Day-11/docs/personas/: 11_ENG_solution-architect.md  16_ENG_python-ai-developer.md  22_PROD_project-manager.md  25_PROD_software-product-analyst.md  31_DES_ux-designer.md  (+1 more)
Ramesh_M/Day3/: app.py  requirements.txt
Ramesh_M/Day3/chats/: 20251102_162152.json  20251102_162248.json
Ramesh_M/Day3/utils/: chat_history.py  config_manager.py  export_manager.py  file_processor.py  llm_provider.py  personality_prompts.py
Ramesh_M/Day4/: Linked_Job_Automation_new.json  Personalised_Newsletter.json
Ramesh_M/Day5/: Viral_LinkedinPost_Creator_with_Bolt_n8n.json  bolt-config_app.json
Ramesh_M/Day6/: RAG_with_Ollama.ipynb
Ramesh_M/Day7/: assignment_1_vector_db_basics.ipynb  assignment_2_advanced_rag.ipynb  assignment_3b_advanced_gradio_rag.ipynb
Ravindra_Babburi/Day-2-Assignment/: Ravindra-summarize_text_and_export.ipynb
Sumit_Vedpathak/Day_3/Streamlit/: app.py
Vibha_TS/Day 11 Agentic RAG/: agenticrag.py  readme.md
Vivek_Trivedi/Advanced Rag/: A1.py  A2.py  A3a.py  A3b.py
sangu_santosh/Day7/: A1.py  A2.py  A3a.py  A3b.py
(+7 files in other folders)
